fix convservation tbl cell alignment, translation, layer control alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,7 @@ td span {
   border: none;
   border-bottom: 1px dashed;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   background: lightgray;
   color: #000;
   margin: 0;
@@ -262,7 +262,7 @@ td span {
 }
 
 .conservation__area__wrapper table {
-  padding: 2px 0;
+  margin: 10px 0;
   border-collapse: collapse;
 }
 
@@ -270,9 +270,6 @@ td span {
   font-weight: bold;
 }
 
-.conservation__area__wrapper table tbody td {
-  width: 50%;
-}
 
 .chart__wrapper {
   display: flex;
@@ -444,6 +441,7 @@ td span {
   white-space: nowrap;
 }
 
+.conservation__area__wrapper table tr td:nth-child(2),
 .about__table__wrapper table tr td:nth-child(2) {
   padding-left: 3px;
 }
